# imdb-clone-django-rest

./: .pre-commit-config.yaml  README.md  db.sqlite3  pyproject.toml
.github/workflows/: tests.yml
content_app/: admin.py  apps.py  models.py  tests.py
content_app/api/: serializers.py  urls.py  views.py
content_app/migrations/: 0001_initial.py  0002_rename_watchlist_review_content.py
user_app/: models.py  tests.py
user_app/api/: serializers.py  urls.py  views.py
watchmate/: settings.py  urls.py
